--- a/src/plugins/presenter/plugin.css
+++ b/src/plugins/presenter/plugin.css
@@ -31,7 +31,7 @@
 }
 
 .slide[data-offset]::after {
-		content: "Right on time! 🎉";
+		content: "On time! 🎉";
 		position: absolute;
 		top: 0;
 		left: .2em;
@@ -40,11 +40,11 @@
 	}
 
 .slide[data-offset][data-running="ahead"]::after {
-		content: "Running " attr(data-offset) " ahead";
+		content: attr(data-offset) " ahead";
 		color: hsl(70 80% 80%);
 	}
 
 .slide[data-offset][data-running="behind"]::after {
-		content: "⚠️ Running " attr(data-offset) " behind";
+		content: "⚠️ " attr(data-offset) " behind";
 		color: hsl(0 90% 85%);
 	}
